--- a/AplicacionInversiones/src/main/resources/FXML/ventanaAjustes.fxml
+++ b/AplicacionInversiones/src/main/resources/FXML/ventanaAjustes.fxml
@@ -1,32 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="641.0" style="-fx-background-color: gainsboro; -fx-border-color: black; -fx-border-width: 8; " xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iesinfantaelena.controllers.client.SettingsController">
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<Pane id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="422.0" stylesheets="@../styles/ajustes.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iesinfantaelena.controllers.client.SettingsController">
    <children>
-      <Label fx:id="labelNombre" layoutX="95.0" layoutY="20.0" text="Label" />
-      <MenuButton layoutX="59.0" layoutY="65.0" mnemonicParsing="false" text="MenuButton">
+      <Label id="label" fx:id="labelNombre" layoutX="65.0" layoutY="14.0" stylesheets="@../styles/ajustes.css" text="Label" textFill="WHITE" textOverrun="CENTER_ELLIPSIS">
+         <font>
+            <Font size="25.0" />
+         </font></Label>
+      <MenuButton id="menu" layoutX="59.0" layoutY="65.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="46.0" style="-fx-cursor: hand;" text="">
          <items>
             <MenuItem mnemonicParsing="false" onAction="#goToHomepage" text="Cartera" />
             <MenuItem mnemonicParsing="false" text="Ajustes" />
             <MenuItem mnemonicParsing="false" onAction="#goToSupport" text="Soporte" />
             <MenuItem mnemonicParsing="false" onAction="#logOut" text="Cerrar Sesión" />
          </items>
+         <graphic>
+            <FontAwesomeIconView glyphName="USER" selectionFill="BLACK" size="20" wrappingWidth="12.571428298950195" />
+         </graphic>
       </MenuButton>
-      <Button layoutX="403.0" layoutY="140.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="107.0" text="Cambiar" />
-      <Button layoutX="403.0" layoutY="175.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="107.0" text="Cambiar" />
-      <Button layoutX="403.0" layoutY="210.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="107.0" text="Cambiar" />
-      <Button layoutX="403.0" layoutY="245.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="107.0" text="Cambiar" />
-      <Button layoutX="403.0" layoutY="280.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="107.0" text="Cambiar" />
-      <Label layoutX="182.0" layoutY="144.0" text="Nombre:" />
-      <Label layoutX="182.0" layoutY="179.0" text="Usuario:" />
-      <Label layoutX="182.0" layoutY="214.0" text="Correo:" />
-      <Label layoutX="182.0" layoutY="249.0" text="Ciudad:" />
-      <Label layoutX="182.0" layoutY="284.0" text="Contraseña:" />
+      <Button fx:id="changeNameButton" layoutX="301.0" layoutY="133.0" mnemonicParsing="false" onAction="#handleChangeRequest" prefHeight="7.0" prefWidth="90.0" style="-fx-cursor: hand;" styleClass="button-custom" text="Cambiar" textAlignment="RIGHT">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets></Button>
+      <Button fx:id="changeUsernameButton" layoutX="301.0" layoutY="181.0" mnemonicParsing="false" onAction="#handleChangeRequest" prefHeight="31.0" prefWidth="90.0" style="-fx-cursor: hand;" styleClass="button-custom" text="Cambiar">
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets></Button>
+      <Button fx:id="changeEmailButton" layoutX="301.0" layoutY="230.0" mnemonicParsing="false" onAction="#handleChangeRequest" prefHeight="15.0" prefWidth="90.0" style="-fx-cursor: hand;" styleClass="button-custom" text="Cambiar" />
+      <Button fx:id="changePasswordButton" layoutX="301.0" layoutY="276.0" mnemonicParsing="false" onAction="#handleChangeRequest" prefHeight="15.0" prefWidth="90.0" style="-fx-cursor: hand;" styleClass="button-custom" text="Cambiar" />
+      <Label id="menu" layoutX="47.0" layoutY="143.0" text="Nombre:" textFill="#f7f5f5" />
+      <Label layoutX="49.0" layoutY="191.0" text="Usuario:" textFill="#faf6f6" />
+      <Label layoutX="51.0" layoutY="240.0" text="Correo:" textFill="#faf9f9" />
+      <Label layoutX="51.0" layoutY="286.0" text="Contraseña:" textFill="#fcfafa" />
+      <Label text="*******" alignment="CENTER" contentDisplay="CENTER" layoutX="123.0" layoutY="286.0" textFill="#f7f5f5" prefHeight="17.0" prefWidth="174.0" />
+      <Label fx:id="nombreTxt" alignment="CENTER" contentDisplay="CENTER" layoutX="123.0" layoutY="143.0" prefHeight="17.0" prefWidth="174.0" text="Nombre" textFill="#f7f5f5" />
+      <Label fx:id="usuarioTxt" alignment="CENTER" layoutX="123.0" layoutY="191.0" prefHeight="17.0" prefWidth="174.0" text="Usuario" textFill="#f7f5f5" />
+      <Label fx:id="correoTxt" alignment="CENTER" contentDisplay="CENTER" layoutX="123.0" layoutY="240.0" prefHeight="17.0" prefWidth="174.0" text="Correo" textFill="#f7f5f5" />
    </children>
-   <cursor>
-      <Cursor fx:constant="HAND" />
-   </cursor>
 </Pane>
