--- a/AplicacionInversiones/src/main/resources/FXML/ventanaChatAdmin.fxml
+++ b/AplicacionInversiones/src/main/resources/FXML/ventanaChatAdmin.fxml
@@ -1,22 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
+<?import de.jensd.fx.glyphs.fontawesome.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <Pane id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="549.0" prefWidth="641.0" stylesheets="@../styles/chat.css" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iesinfantaelena.controllers.admin.AdminChatController">
     <children>
-        <Label fx:id="labelNombre" layoutX="50.0" layoutY="24.0" text="Admin" textFill="WHITE" />
-        <MenuButton layoutX="10.0" layoutY="54.0" mnemonicParsing="false" text="MenuButton">
+        <Label fx:id="labelNombre" layoutX="25.0" layoutY="14.0" text="Administrador" textFill="WHITE">
+         <font>
+            <Font size="20.0" />
+         </font></Label>
+        <MenuButton layoutX="10.0" layoutY="54.0" mnemonicParsing="false">
             <items>
                 <MenuItem mnemonicParsing="false" onAction="#logOut" text="Cerrar Sesión" />
             </items>
+            <graphic>
+                <FontAwesomeIconView glyphName="USER" selectionFill="BLACK" size="15" wrappingWidth="12.571428298950195" />
+            </graphic>
         </MenuButton>
-        <ChoiceBox fx:id="connectedClientsChoiceBox" layoutX="137.0" layoutY="54.0" onAction="#selectClient" prefWidth="80.0" value="Clientes" />
+        <ChoiceBox fx:id="connectedClientsChoiceBox" layoutX="92.0" layoutY="53.0" onAction="#selectClient" prefWidth="80.0" value="Clientes" />
         <TextArea fx:id="conversationTextAreaAdmin" editable="false" layoutX="108.0" layoutY="103.0" prefHeight="311.0" prefWidth="423.0" />
         <TextField fx:id="messageTextFieldAdmin" alignment="CENTER_RIGHT" layoutX="108.0" layoutY="414.0" onAction="#sendMessage" prefHeight="37.0" prefWidth="423.0" />
     </children>
-    <cursor>
-        <Cursor fx:constant="HAND" />
-    </cursor>
+
 </Pane>
