--- a/AplicacionInversiones/src/main/resources/FXML/ventanaPrincipal.fxml
+++ b/AplicacionInversiones/src/main/resources/FXML/ventanaPrincipal.fxml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
@@ -16,53 +14,66 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<Pane id="pane" prefHeight="549.0" prefWidth="641.0" stylesheets="@../styles/principal.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iesinfantaelena.controllers.client.HomepageController">
-    <children>
-        <!-- Integration of the user greeting and balance -->
-        <VBox alignment="TOP_CENTER" prefHeight="549.0" prefWidth="641.0" spacing="10">
-            <HBox alignment="CENTER" spacing="10">
-                <Label fx:id="labelNombre" styleClass="greeting-text" text="Hi, [Nombre del Cliente]!" />
-                <Label fx:id="balanceLabel" styleClass="balance-text" text="€ 3.210,00" />
-            </HBox>
-            <!-- Existing MenuButton from your FXML -->
-            <MenuButton id="menu" mnemonicParsing="false" styleClass="menu-button">
-                <items>
-                    <MenuItem mnemonicParsing="false" text="Cartera" />
-                    <MenuItem mnemonicParsing="false" onAction="#goToSettings" text="Ajustes" />
-                    <MenuItem mnemonicParsing="false" onAction="#goToSupport" text="Soporte" />
-                    <MenuItem mnemonicParsing="false" onAction="#logOut" text="Cerrar Sesión" />
-                </items>
-                <graphic>
-                    <FontAwesomeIconView glyphName="USER" />
-                </graphic>
-            </MenuButton>
-            <!-- Example LineChart integration -->
-            <TabPane fx:id="tabPane" styleClass="chart-tab-pane" tabClosingPolicy="UNAVAILABLE">
-                <Tab text="Last Week">
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<Pane id="pane" prefHeight="549.0" prefWidth="641.0" styleClass="#pane" stylesheets="@../styles/principal.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="iesinfantaelena.controllers.client.HomepageController">
+        <children>
+            <!-- Integration of the user greeting and balance -->
+            <VBox alignment="TOP_CENTER" prefHeight="549.0" prefWidth="641.0" spacing="10">
+                <HBox alignment="CENTER" spacing="10">
+                    <Label fx:id="labelNombre" styleClass="greeting-text" text="Hi, [Nombre del Cliente]!" textAlignment="CENTER" textFill="WHITE" />
+                    <Label fx:id="balanceLabel" styleClass="balance-text" text="" />
+                </HBox>
+                <!-- Existing MenuButton from your FXML -->
+                <MenuButton id="menu" graphicTextGap="0.0" mnemonicParsing="false" prefHeight="58.0" prefWidth="33.0" style="-fx-cursor: hand;" styleClass="menu-button">
+                    <items>
+                        <MenuItem mnemonicParsing="false" text="Cartera" />
+                        <MenuItem mnemonicParsing="false" onAction="#goToSettings" text="Ajustes" />
+                        <MenuItem mnemonicParsing="false" onAction="#goToSupport" text="Soporte" />
+                        <MenuItem mnemonicParsing="false" onAction="#logOut" text="Cerrar Sesión" />
+                    </items>
+                    <graphic>
+                        <FontAwesomeIconView glyphName="USER" selectionFill="BLACK" size="30" wrappingWidth="12.571428298950195" />
+                    </graphic>
+                <font>
+                   <Font size="18.0" />
+                </font>
+                </MenuButton>
+                <!-- Example LineChart integration -->
+                <TabPane fx:id="tabPane" styleClass="chart-tab-pane" tabClosingPolicy="UNAVAILABLE">
+                    <Tab text="Última semana">
+                        <AnchorPane>
+                            <LineChart fx:id="weekLineChart" prefHeight="253.0" prefWidth="641.0" styleClass="line-chart-custom">
+                                <xAxis>
+                                    <CategoryAxis label="Día" tickLabelFill="WHITE" fx:id="xAxis" />
+                                </xAxis>
+                                <yAxis>
+                                    <NumberAxis fx:id="yAxis" label="Saldo" tickLabelFill="WHITE" />
+                                </yAxis>
+                            </LineChart>
+                        </AnchorPane>
+                    </Tab>
+                    <Tab text="Todos los tiempos">
                     <AnchorPane>
-                        <LineChart fx:id="weekLineChart" prefHeight="253.0" prefWidth="641.0" styleClass="line-chart-custom">
+                        <LineChart fx:id="allLineChart" prefHeight="253.0" prefWidth="641.0" styleClass="line-chart-custom">
                             <xAxis>
-                                <CategoryAxis label="Day" fx:id="xAxis" />
+                                <CategoryAxis label="Día" tickLabelFill="WHITE" fx:id="xAxis" />
                             </xAxis>
                             <yAxis>
-                                <NumberAxis fx:id="yAxis" label="Amount" />
+                                <NumberAxis fx:id="yAxis" label="Saldo" tickLabelFill="WHITE" />
                             </yAxis>
                         </LineChart>
+
                     </AnchorPane>
-                </Tab>
-                <Tab text="Last Month" />
-                <Tab text="All Time" />
-            </TabPane>
-         <ImageView fitHeight="163.0" fitWidth="272.0" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@../../../../target/classes/images/tarjeta.png" />
-            </image>
-         </ImageView>
-        </VBox>
-        <!-- Your existing VBox and other elements here -->
-    </children>
-    <cursor>
-        <Cursor fx:constant="HAND" />
-    </cursor>
-</Pane>
+                    </Tab>
+                </TabPane>
+             <ImageView fx:id="imageView" fitHeight="123.0" fitWidth="236.0" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;">
+                <image>
+                   <Image url="@../../../target/classes/images/tarjeta.jpeg" />
+                </image>
+             </ImageView>
+            </VBox>
+        </children>
+
+    </Pane>
